syntax = "proto3";

option go_package = "github.com/gabrielmvnog/go-coupon/customer";

service CustomerService {

    rpc CreateCustomer(Customer) returns (CustomerIdentifier) {}

    rpc GetCustomer(CustomerIdentifier) returns (CustomerResponse) {}
};

message Customer {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string phone = 4;
}

message CustomerIdentifier {
    string id = 1;
}

message CustomerResponse {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string phone = 5;
}
